language/move-prover/tests/sources/functional/mono.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:71:21 ───
    │
 71 │     spec vec_addr { ensures result[0] != @0x1; }
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:71
    =     at tests/sources/functional/mono.move:70: vec_addr
    =         x = <redacted>
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:71

error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:73:21 ───
    │
 73 │     spec vec_bool { ensures result[0] != true; }
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:73
    =     at tests/sources/functional/mono.move:72: vec_bool
    =         x = <redacted>
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:73

error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:69:20 ───
    │
 69 │     spec vec_int { ensures result[0] != 1; }
    │                    ^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:69
    =     at tests/sources/functional/mono.move:68: vec_int
    =         x = <redacted>
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:69

error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:77:28 ───
    │
 77 │     spec vec_struct_addr { ensures result[0].x != @0x1; }
    │                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:77
    =     at tests/sources/functional/mono.move:76: vec_struct_addr
    =         x = <redacted>
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:77

error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:75:27 ───
    │
 75 │     spec vec_struct_int { ensures result[0].x != 1; }
    │                           ^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:75
    =     at tests/sources/functional/mono.move:74: vec_struct_int
    =         x = <redacted>
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:75

error: post-condition does not hold

    ┌── tests/sources/functional/mono.move:82:20 ───
    │
 82 │     spec vec_vec { ensures len(result[0]) != 0; }
    │                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/mono.move:82
    =     at tests/sources/functional/mono.move:79: vec_vec
    =         x = <redacted>
    =     at tests/sources/functional/mono.move:80: vec_vec
    =         result = <redacted>
    =     at tests/sources/functional/mono.move:81: vec_vec
    =     at tests/sources/functional/mono.move:82
